tests/baselines/reference/constDeclarations-ambient-errors.types
=== tests/cases/compiler/constDeclarations-ambient-errors.ts ===
// error: no intialization expected in ambient declarations
declare const c1: boolean = true;
>c1 : 真假
>类型别名 :=> 真假
>true : 为真
>类型别名 :=> 为真

declare const c2: number = 0;
>c2 : 数字
>类型别名 :=> 数字
>0 : 0

declare const c3 = null, c4 :string = "", c5: any = 0;
>c3 : 任意
>类型别名 :=> 任意
>null : 空值
>类型别名 :=> 空值
>c4 : 文字
>类型别名 :=> 文字
>"" : ""
>c5 : 任意
>类型别名 :=> 任意
>0 : 0

declare module M {
>M : 类为 M

    const c6 = 0;
>c6 : 0
>0 : 0

    const c7: number = 7;
>c7 : 数字
>类型别名 :=> 数字
>7 : 7
}
